[gd_scene load_steps=7 format=3 uid="uid://cuhno68yx0hdi"]

[ext_resource type="Script" path="res://scripts/playerLassos.gd" id="1_1slee"]
[ext_resource type="Texture2D" uid="uid://bk4hx8teuapkf" path="res://Asset/entities/lasso/lassoHorizontalSmolTest.png" id="2_vls07"]
[ext_resource type="Texture2D" uid="uid://dfhhbslyynltb" path="res://Asset/entities/lasso/lassoParticle.png" id="3_wy7lp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fqf4c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vls07")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gryqn"]
size = Vector2(16, 3)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pk53u"]

[node name="Lasso" type="Node2D"]
script = ExtResource("1_1slee")

[node name="LassoSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 7)
sprite_frames = SubResource("SpriteFrames_fqf4c")
speed_scale = 0.5

[node name="LassoArea" type="Area2D" parent="."]
position = Vector2(0, 7)

[node name="LassoAreaShape" type="CollisionShape2D" parent="LassoArea"]
shape = SubResource("RectangleShape2D_gryqn")

[node name="LassoTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="LassoSelfDestructTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
amount = 15
process_material = SubResource("ShaderMaterial_pk53u")
texture = ExtResource("3_wy7lp")
explosiveness = 0.11

[connection signal="animation_finished" from="LassoSprite" to="." method="_on_explosion_sprite_animation_finished"]
[connection signal="body_entered" from="LassoArea" to="." method="_on_explosion_area_body_entered"]
